force-app/main/default/objects/Onboarding_Status_Tracking_Config__mdt/Onboarding_Status_Tracking_Config__mdt.object-meta.xml
<CustomObject>
    <description>Tracks status fields on related lookup objects for onboarding change logging</description>
    <label>Onboarding Status Tracking Config</label>
    <pluralLabel>Onboarding Status Tracking Config</pluralLabel>
</CustomObject>