force-app/main/default/objects/Onboarding_Status_Tracking_Config__mdt/fields/Expire_On_Inactivity__c.field-meta.xml
<CustomField>
    <fullName>Expire_On_Inactivity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Expire On Inactivity</label>
    <type>Checkbox</type>
</CustomField>