force-app/main/default/objects/Onboarding_Status_Tracking_Config__mdt/fields/Expire_Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Expire_Threshold_Days__c</fullName>
    <label>Expire Threshold Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>