force-app/main/default/objects/Onboarding_Status_Tracking_Config__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>The status field to track (e.g. Status__c)</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>