force-app/main/default/objects/Onboarding_Status_Tracking_Config__mdt/fields/Lookup_To_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Lookup_To_Onboarding__c</fullName>
    <description>API name of the lookup field (e.g. Onboarding__c)</description>
    <label>Lookup To Onboarding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>