force-app/main/default/objects/Onboarding_Status_Tracking_Config__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Stores API name of source object (e.g. Dealer_Insurance__c)</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>